--- a/thesis.bib
+++ b/thesis.bib
@@ -39,6 +39,13 @@
   year = {2014}
 }
 
+@article{berger2016,
+  author = {Guillaume Berger and Roland Memisevic},
+  title = {Incorporating long-range consistency in CNN-based texture generation},
+  journal = {arXiv:1606.01286},
+  year = {2016}
+}
+
 @inproceedings{gatys2015,
   author = {Leon A. Gatys and Alexander S. Ecker and Matthias Bethge},
   title = {Texture Synthesis Using Convolutional Neural Networks},
@@ -680,4 +687,11 @@ pages    = {265--283}
   number = {11},
   pages = {1231--1237},
   year = {2013}
+}
+
+@inproceedings{shen2018,
+  author = {Shen, Falong and Yan, Shuicheng and Zeng, Gang},
+  title = {Neural Style Transfer via Meta Networks},
+  booktitle = CVPR,
+  year = {2018}
 }
