--- a/experimental_procedure.tex
+++ b/experimental_procedure.tex
@@ -1,4 +1,4 @@
-\section{Experimental procedure}
+\section{Experimental procedure}\label{sec:experimental_procedure}
 Provided here are the experimental details of the user study
 using Amazon Mechanical Turk (AMT). Experimental trials were
 grouped into batches of Human Intelligence Tasks (HITs) for
@@ -22,9 +22,12 @@ follows:
 	\item Users were each restricted to a single HIT.
 \end{enumerate}
 Obvious unrealistic dynamic textures were synthesized by 
-terminating synthesis early (100 iterations) and were used as sentinel tests. \todomatthew{maybe provide some examples?}
+terminating synthesis early (100 iterations) and were used as sentinel tests. An example is shown in Fig.\ \ref{fig:sentinel}.
+
+\input{fig_sentinel}
+
 Three of the 59 pairwise comparisons were sentinels and results from
-users which gave incorrect answers on any of the sentinel
+users who gave incorrect answers on any of the sentinel
 comparisons were not used. The left-right order of textures within a pair,
 display order within a pair, and order of pairs within a HIT, were randomized.
 An example of a HIT is shown in a video included with the supplemental material: \path{HIT_example.mp4}.
