--- a/fig_dynamics_representations.tex
+++ b/fig_dynamics_representations.tex
@@ -1,6 +1,6 @@
 \begin{figure}[t]
 \begin{center}
-	\epsfig{file=dynamics_representations.png, width = \textwidth}\\
+	\epsfig{file=dynamics_representations.pdf, width = 0.8\textwidth}\\
 	\caption[Dynamics representation spectrum]{Dynamics representation spectrum (adapted from Derpanis \cite{derpanis2010role}). Common abstractions of dynamics of temporal imagery and their respective level of commitment to an underlying model.}
 	\vspace{-0.65cm}
 	\label{fig:dynamics_representations}
