--- a/fig_funke_comparison.tex
+++ b/fig_funke_comparison.tex
@@ -7,7 +7,7 @@
 {Funke \etal \cite{funke2017}} &
 \showtexture{leaves_funke/frame_} \\
 \hline
-{Two-stream model} & 
+{two-stream model} & 
 \showtexture{leaves_output/frame_} \\
 \end{tabular}
 \end{center}
