--- a/fig_funke_xie_comparison.tex
+++ b/fig_funke_xie_comparison.tex
@@ -13,7 +13,7 @@
 {Xie \etal \cite{xie2017synthesizing} (FC)} & 
 \showtexture{smoke_plume_1_xie_fc/frame_} \\
 \hline
-{Two-stream model} & 
+{two-stream model} & 
 \showtexture{smoke_plume_1_output/frame_} \\
 \end{tabular}
 \end{center}
