--- a/full_user_study_results.tex
+++ b/full_user_study_results.tex
@@ -1,4 +1,4 @@
-\section{Full user study results}
+\section{Full user study results}\label{sec:full_user_study_results}
 Figures \ref{fig:alltextures_hist_short} and \ref{fig:alltextures_hist_long}
 show histograms of the average user accuracy on each texture, averaged over a 
 range of exposure times. The histogram bars are ordered from lowest
