--- a/sup_tables.tex
+++ b/sup_tables.tex
@@ -1,6 +1,6 @@
 \begin{table*}
 \centering
-	\resizebox{0.9\textwidth}{!}{%
+	\resizebox{\textwidth}{!}{%
 	\csvreader[tabular=|l|l|,
 	    table head=\hline Dynamic texture & 300 ms.\\\hline\hline,
 	    late after line=\\\hline]%
@@ -43,7 +43,7 @@
 
 \begin{table*}
 	\centering
-	\resizebox{0.65\textwidth}{!}{%
+	\resizebox{0.75\textwidth}{!}{%
 	\csvreader[tabular=|l|l|,
 	    table head=\hline Dynamic texture & Short (300-600 ms.)\\\hline\hline,
 	    late after line=\\\hline]%
@@ -68,7 +68,7 @@
 
 \begin{table*}
 	\centering
-	\resizebox{0.9\textwidth}{!}{%
+	\resizebox{\textwidth}{!}{%
 	\csvreader[tabular=|l|l|,
 	    table head=\hline Dynamic texture & 300 ms.\\\hline\hline,
 	    late after line=\\\hline]%
@@ -111,7 +111,7 @@
 
 \begin{table*}
 	\centering
-	\resizebox{0.65\textwidth}{!}{%
+	\resizebox{0.75\textwidth}{!}{%
 	\csvreader[tabular=|l|l|,
 	    table head=\hline Dynamic texture & Short (300-600 ms.)\\\hline\hline,
 	    late after line=\\\hline]%
@@ -137,7 +137,7 @@
 \clearpage
 \begin{table*}
 	\centering
-	\resizebox{0.9\textwidth}{!}{%
+	\resizebox{\textwidth}{!}{%
 	\csvreader[tabular=|l|l|,
 	    table head=\hline Appearance group & 300 ms.\\\hline\hline,
 	    late after line=\\\hline]%
@@ -180,7 +180,7 @@
 
 \begin{table*}
 	\centering
-	\resizebox{0.65\textwidth}{!}{%
+	\resizebox{0.75\textwidth}{!}{%
 	\csvreader[tabular=|l|l|,
 	    table head=\hline Appearance group & Short (300-600 ms.)\\\hline\hline,
 	    late after line=\\\hline]%
@@ -203,7 +203,7 @@
 
 \begin{table*}
 	\centering
-	\resizebox{0.9\textwidth}{!}{%
+	\resizebox{\textwidth}{!}{%
 	\csvreader[tabular=|l|l|,
 	    table head=\hline Appearance group & 300 ms.\\\hline\hline,
 	    late after line=\\\hline]%
@@ -246,7 +246,7 @@
 
 \begin{table*}
 	\centering
-	\resizebox{0.65\textwidth}{!}{%
+	\resizebox{0.75\textwidth}{!}{%
 	\csvreader[tabular=|l|l|,
 	    table head=\hline Appearance group & Short (300-600 ms.)\\\hline\hline,
 	    late after line=\\\hline]%
@@ -273,7 +273,7 @@
 \clearpage
 \begin{table*}
 	\centering
-	\resizebox{0.9\textwidth}{!}{%
+	\resizebox{\textwidth}{!}{%
 	\csvreader[tabular=|l|l|,
 	    table head=\hline Dynamics group & 300 ms.\\\hline\hline,
 	    late after line=\\\hline]%
@@ -316,7 +316,7 @@
 
 \begin{table*}
 	\centering
-	\resizebox{0.65\textwidth}{!}{%
+	\resizebox{0.75\textwidth}{!}{%
 	\csvreader[tabular=|l|l|,
 	    table head=\hline Dynamics group & Short (300-600 ms.)\\\hline\hline,
 	    late after line=\\\hline]%
@@ -339,7 +339,7 @@
 
 \begin{table*}
 	\centering
-	\resizebox{0.9\textwidth}{!}{%
+	\resizebox{\textwidth}{!}{%
 	\csvreader[tabular=|l|l|,
 	    table head=\hline Dynamics group & 300 ms.\\\hline\hline,
 	    late after line=\\\hline]%
@@ -382,7 +382,7 @@
 
 \begin{table*}
 	\centering
-	\resizebox{0.65\textwidth}{!}{%
+	\resizebox{0.75\textwidth}{!}{%
 	\csvreader[tabular=|l|l|,
 	    table head=\hline Dynamics group & Short (300-600 ms.)\\\hline\hline,
 	    late after line=\\\hline]%
@@ -409,7 +409,7 @@
 \clearpage
 \begin{table*}
 	\centering
-	\resizebox{0.9\textwidth}{!}{%
+	\resizebox{\textwidth}{!}{%
 	\csvreader[tabular=|l|l|,
 	    table head=\hline Group & 300 ms.\\\hline\hline,
 	    late after line=\\\hline]%
@@ -452,7 +452,7 @@
 
 \begin{table*}
 	\centering
-	\resizebox{0.65\textwidth}{!}{%
+	\resizebox{0.75\textwidth}{!}{%
 	\csvreader[tabular=|l|l|,
 	    table head=\hline Group & Short (300-600 ms.)\\\hline\hline,
 	    late after line=\\\hline]%
@@ -475,7 +475,7 @@
 
 \begin{table*}
 	\centering
-	\resizebox{0.9\textwidth}{!}{%
+	\resizebox{\textwidth}{!}{%
 	\csvreader[tabular=|l|l|,
 	    table head=\hline Group & 300 ms.\\\hline\hline,
 	    late after line=\\\hline]%
@@ -518,7 +518,7 @@
 
 \begin{table*}
 	\centering
-	\resizebox{0.65\textwidth}{!}{%
+	\resizebox{0.75\textwidth}{!}{%
 	\csvreader[tabular=|l|l|,
 	    table head=\hline Group & Short (300-600 ms.)\\\hline\hline,
 	    late after line=\\\hline]%
