--- a/thesis-short.bib
+++ b/thesis-short.bib
@@ -85,7 +85,7 @@
 @STRING( MVA = "MVA"
 )
 
-@STRING( ICML = "ICML"
+@STRING( ICML = "International Conference on Machine Learning (ICML)"
 )
 
 @STRING( PAMI = "IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI)"
