--- a/thesis.bib
+++ b/thesis.bib
@@ -32,10 +32,10 @@
   year = {2010}
 }
 
-@article{kingma2017,
-  author = {{Kingma}, D.~P. and {Ba}, J.},
-  title = "{Adam: A Method for Stochastic Optimization}",
-  journal = {arXiv:1412.6980},
+@inproceedings{kingma2017,
+  author = {Diederik P. Kingma and Jimmy Ba},
+  title = {Adam: A Method for Stochastic Optimization},
+  booktitle = ICLR,
   year = {2014}
 }
 
@@ -84,6 +84,15 @@
   pages = {251--260},
   year = {2012},
   organization = {ACM}
+}
+
+@inproceedings{fitzgibbon2001,
+  title = {Stochastic rigidity: Image registration for nowhere-
+static scenes},
+  author = {Andrew W. Fitzgibbon},
+  booktitle = ICCV,
+  pages = {662--669},
+  year = {2001}
 }
 
 @inproceedings{georgiadis2015texture,
@@ -174,7 +183,7 @@
   year = {2017}
 }
 
-@article{Villegas2017,
+@inproceedings{Villegas2017,
   title = {Decomposing Motion and Content for Natural Video Sequence Prediction},
   author = {Ruben Villegas, Jimei Yang, Seunghoon Hong, Xunyu Lin, Honglak Lee},
   booktitle = ICLR,
@@ -220,15 +229,15 @@
 }
 
 @inproceedings{ranjan2017,
-  author = {{Ranjan}, A. and {Black}, M.~J.},
-  title = "{Optical Flow Estimation using a Spatial Pyramid Network}",
+  author = {Anurag Ranjan and Michael J. Black},
+  title = {Optical Flow Estimation using a Spatial Pyramid Network},
   booktitle = CVPR,
   year = {2017}
 }
 
 @inproceedings{yu2016,
-  author = {{Yu}, J.~J. and {Harley}, A.~W. and {Derpanis}, K.~G.},
-  title = "{Back to Basics: Unsupervised Learning of Optical Flow via Brightness Constancy and Motion Smoothness}",
+  author = {Jason J. Yu and Adam W. Harley and Konstantinos G. Derpanis},
+  title = {Back to Basics: Unsupervised Learning of Optical Flow via Brightness Constancy and Motion Smoothness},
   booktitle = ECCVW,
   year = {2016}
 }
@@ -366,7 +375,7 @@
 }
 
 @article {fahle1981,
-	author = {Fahle, M. and Poggio, T.},
+	author = {Manfred Fahle and Tomaso Poggio},
 	title = {Visual Hyperacuity: Spatiotemporal Interpolation in Human Vision},
 	volume = {213},
 	number = {1193},
@@ -418,7 +427,7 @@
                Victor S. Lempitsky},
   title     = {Texture Networks: Feed-forward Synthesis of Textures and Stylized
                Images},
-  booktitle = {ICML},
+  booktitle = ICML,
   pages     = {1349--1357},
   year      = {2016}
 }
@@ -457,7 +466,7 @@ year = "1998"
 }
 
 @inproceedings{konda2014,
-  title     = {Learning to encode motion using spatio-temporal synchrony International Conference on Learning Representation},
+  title     = {Learning to encode motion using spatio-temporal synchrony},
   author    = {Konda, Kishore and Memisevic, Roland and Michalski, Vincent},
   booktitle = ICLR,
   year      = {2014}
@@ -551,7 +560,7 @@ year = "1998"
 
 @article{nelson1992,
   title     = {Qualitative recognition of motion using temporal texture},
-  author    = {Nelson, R. and Polana, R.},
+  author    = {Randal C. Nelson and Ramprasad Polana},
   journal   = CVGIP,
   volume = {56},
   number ={1},
@@ -641,7 +650,7 @@ pages    = {265--283}
                Chenyu Wu and
                Yanxi Liu and
                Vivek Kwatra},
-  booktitle	= {CVPR},
+  booktitle	= CVPR,
   volume={1},
   pages={427--434},
   year={2006}
