--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,5 +1,6 @@
 \begin{acknowledgements}
 \thispagestyle{plain}
 \setcounter{page}{2}
-	\lipsum[1]
+%	This thesis is dedicated to my parents, Bereket Tesfaldet and Simret Tesfaldet. Your caring, loving commitment to my well-being and utmost support have taught me the value.
+I acknowledge the financial support of the Canadian Graduate Scholarship (CGS) awarded by the Natural Sciences and Engineering Research Council of Canada (NSERC). This research was undertaken as part of the Vision: Science to Applications program, thanks in part to funding from the Canada First Research Excellence Fund.
 \end{acknowledgements}
