--- a/related_work.tex
+++ b/related_work.tex
@@ -8,16 +8,16 @@ related to this thesis is covered simultaneously.
 
 \section{Convolutional networks}
 
-A convolutional network (ConvNet) is a feed-forward computational graph of processing nodes, commonly used in analyzing visual imagery. It is a class of artificial neural networks (ANNs), which are computational systems vaguely inspired by the biological neural networks that constitute animal brains. ConvNets perform tasks (\eg, object classification) by processing an input, $\mathbf{X} \in \mathbb{R}^{H_x \times W_x \times C_x}$, in a feed-forward manner via a series of linear and non-linear transformations and producing an output, $\mathbf{Y} \in \mathbb{R}^{H_y \times W_y \times C_y}$, relevant to the task (such as the class of an object). Here $H_\ast \times W_\ast$ represents spatial dimensions and $C_\ast$ represents the  number of channels. Each non-linear transformation acts as a point of demarcation in the network known as a \emph{layer}. ConvNets typically consist of multiple layers, each containing a collection of nodes sometimes called \emph{neurons}. At each spatial-channel location of the input to a layer, a neuron computes local non-linear transformations, \eg, $\sigma(\mathbf{x}) = \max{(0, \phi(\mathbf{x}))}$ (known as the \emph{rectified linear unit} or ReLU \cite{nair2010rectified}). At a single location of the input, $\mathbf{x} \equiv (x, y, z)$, the non-linear transformation performed by this neuron produces an output called an \emph{activation} or \emph{feature}, $\sigma(\mathbf{x}) \in \mathbb{R}$. The set of activations produced by a neuron at every location of the input is known as an \emph{activation map} or \emph{feature map}, $\sigma \in \mathbb{R}^{H_\sigma \times W_\sigma \times C_\sigma}$. At the $l$-th layer of the network and for each location $\mathbf{x}$ of the input map, the input to each neuron is the weighted linear combination of activations from neighbouring neurons at the previous layer, $l-1$:
+A convolutional network (ConvNet) is a feed-forward computational graph of processing nodes, commonly used in analyzing visual imagery. It is a class of artificial neural networks (ANNs), which are computational systems inspired by biological neural networks. ConvNets perform tasks (\eg, object classification) by processing an input, $\mathbf{X} \in \mathbb{R}^{H_x \times W_x \times C_x}$, in a feed-forward manner via a series of linear and non-linear transformations and producing an output, $\mathbf{Y} \in \mathbb{R}^{H_y \times W_y \times C_y}$, relevant to the task (such as the class of an object). Here, $H_\ast \times W_\ast$ represents the spatial dimensions and $C_\ast$ represents the number of channels (\ie, the ``depth'' of the input). For example, a $3$-channel colour image input with $256 \times 256$ spatial locations is represented as $\mathbf{X} \in \mathbb{R}^{256 \times 256 \times 3}$, where each spatial location contains three pixel intensities, corresponding to the amount of intensity of the colours Red, Green, and Blue (RGB), respectively. Each non-linear transformation acts as a point of demarcation in the network known as a \emph{layer}. ConvNets typically consist of multiple layers, each containing a collection of nodes sometimes called \emph{neurons}. At each spatial-channel location of the input to a layer, a neuron computes local non-linear transformations, \eg, $\sigma(\mathbf{x}) = \max{(0, \phi(\mathbf{x}))}$ (known as the \emph{rectified linear unit} or ReLU \cite{nair2010rectified}). At a single location of the input, $\mathbf{x} \equiv (x, y, z)$, the non-linear transformation performed by this neuron produces an output called an \emph{activation} or \emph{feature}, $\sigma(\mathbf{x}) \in \mathbb{R}$. The set of activations produced by a neuron at every location of the input is known as an \emph{activation map} or \emph{feature map}, $\sigma \in \mathbb{R}^{H_\sigma \times W_\sigma \times C_\sigma}$. At the $l$-th layer of the network and for each location $\mathbf{x}$ of the input map, the input to each neuron is the weighted linear combination of activations from neighbouring neurons at the previous layer, $l-1$:
 \begin{equation}
 	\begin{aligned}
 		\phi^l(\mathbf{x}) &= \left(\mathbf{w}^l * \sigma^{l-1}(\mathbf{x})\right) + b^l\\
 		&= \left(\sum_{(i, j, k) \in \Omega} \mathbf{w}^l(i, j, k) \sigma^{l-1}(x - i, y - j, z - k)\right) + b^l\ ,
 	\end{aligned}
 \end{equation}
-where $\mathbf{w}^l$ are the \emph{weights} (or \emph{filter}) of the neuron applied to the input $\sigma^{l-1}(\mathbf{x})$, $\Omega$ is a spatial-channel neighbourhood centered about $\mathbf{x}$, $b^l$ is an offset term known as the \emph{bias}, and $\ast$ represents the \emph{convolution} (or \emph{filtering}) operator. Colloquially, the term ``convolution'' is often used to describe the combined process of convolving over an input and subsequently computing its activation. Convolution is typically done in a sliding window fashion across the entire input. At the base of the ConvNet, inputs are typically images (\eg, RGB image $\mathbf{X} \in \mathbb{R}^{H_x \times W_x \times 3}$), while inputs at intermediate layers are activation maps (\eg, $\sigma \in \mathbb{R}^{H_\sigma \times W_\sigma \times C_\sigma}$). 
+where $\mathbf{w}^l$ are the \emph{weights} (or \emph{filter}) of the neuron applied to the input $\sigma^{l-1}(\mathbf{x})$, $\Omega$ is a spatial-channel neighbourhood centered about $\mathbf{x}$, $b^l$ is an offset term known as the \emph{bias}, and $\ast$ represents the \emph{convolution} (or \emph{filtering}) operator. Colloquially, the term ``convolution'' is often used to describe the combined process of convolving over an input and subsequently computing its activation. Convolution is typically done in a sliding window fashion across the entire input. At the base of the ConvNet, inputs are typically images while inputs at intermediate layers are activation maps (\eg, $\sigma \in \mathbb{R}^{H_\sigma \times W_\sigma \times C_\sigma}$). 
 
-ConvNets ``learn'' to perform tasks through an iterative process called \emph{training}. At each iteration, an input is fed through the network to produce an output which is subsequently evaluated against the ``true'' output for the given input. This evaluation is known as the \emph{loss function} and represents the network's performance on the task. Implicitly, it also represents the objective the network must achieve (\eg, minimizing classification error). Starting from the loss, the network adjusts its weights and biases at each layer via the gradient of the loss with respect to the weights and biases at that layer. After a suitable amount of training iterations, this \emph{gradient descent} process will be stopped.
+ConvNets ``learn'' to perform tasks through an iterative process called \emph{training}, which involves optimizing their weights based on an objective over training data (\eg, input images with corresponding expected outputs). At each iteration, an input is fed through the network to produce an output which is subsequently evaluated against the expected, \ie, ``true'', output for the given input. This evaluation is known as the \emph{loss function} and represents the network's performance on the task. Implicitly, it also represents the objective the network must achieve, \eg, minimizing classification error. Starting from the loss, the network adjusts its weights and biases at each layer via the gradient of the loss with respect to the weights and biases at that layer. After a suitable amount of training iterations, this \emph{gradient descent} process is terminated.
 
 \section{Parametric texture synthesis}
 
@@ -45,7 +45,7 @@ responses were used to optimize an initial noise pattern
 to match the filter response statistics of an input texture.
 
 More recently, Gatys \etal \cite{gatys2015} demonstrated
-impressive results by replacing the linear filter bank with the VGG-19
+impressive results by replacing the handcrafted linear filter bank with the learned filters from the VGG-19
 \cite{simonyan2014very} ConvNet pre-trained on the ImageNet \cite{russakovsky2015} dataset for the task of object
 recognition. This ConvNet, in effect, served as a proxy for the ventral visual
 processing stream. 
@@ -54,12 +54,13 @@ Textures were modelled in terms of the normalized correlations between activatio
 \subsection{Texture synthesis using a convolutional network}
 \label{sec:texture_synthesis_using_a_convnet}
 
-Since the two-stream approach to dynamic texture synthesis proposed by this thesis is an extension of the above texture 
+Since the two-stream approach to dynamic texture synthesis proposed in this thesis is an extension of the Gatys \etal \cite{gatys2015} texture 
 synthesis model, it is useful to describe their approach here. Given a target texture as input,
 let $\mathbf{A}^{l} \in \mathbb{R}^{N_l\times M_l}$
-be its row-vectorized activation maps at the $l$-th layer of a ConvNet (VGG-19 in the case of Gatys \etal \cite{gatys2015}), where $N_l$ and $M_l$ denote the number of
+be its row-vectorized activation maps at the $l$-th layer of a ConvNet, where $N_l$ and $M_l$ denote the number of
 activation maps and the number of spatial locations,
-respectively. The normalized correlations between activation maps
+respectively (in the case of Gatys \etal \cite{gatys2015}, they used the VGG-19 ConvNet, and they normalized the network by scaling its weights such that the mean activation of each convolutional filter over images and positions is equal to one).
+The normalized correlations between activation maps
 within a layer are encapsulated by a Gram matrix,
 $\mathbf{G}^l \in \mathbb{R}^{N_l \times N_l}$, whose entries are given by:
 \begin{equation}
@@ -79,14 +80,14 @@ the Gram matrices of the target texture and that of the synthesized texture:
    \mathcal{L} = \frac{1}{L} \sum_{l} \Vert \mathbf{G}^l - \hat{\mathbf{G}}^l \Vert^2_F\ ,
    \label{eq:tex_loss}
 \end{equation}
-where $L$ is the number of VGG-19 layers used when computing Gram matrices
-and $\Vert \cdot \Vert_F$ is the Frobenius norm. Gram matrices are computed on
+where $L$ is the number of ConvNet layers used when computing Gram matrices
+and $\Vert \cdot \Vert_F$ is the Frobenius norm. In the case of Gatys \etal \cite{gatys2015}, Gram matrices were computed on
 layers \emph{conv1\_1}, \emph{pool1}, \emph{pool2}, \emph{pool3}, and \emph{pool4}.
 
-Before synthesizing a texture, an initial forward pass through VGG-19 is
+Before synthesizing a texture, an initial forward pass through the ConvNet is
 performed with the target texture as input. The target texture's Gram matrices
-across various layers in the network are computed and saved as objectives for
-the synthesis process. Then the synthesized texture is initialized with IID
+across various layers in the network are computed and stored to be used in the final objective for
+the synthesis process (Eq.\ \ref{eq:tex_loss}). Then the synthesized texture is initialized with Independent and Identically Distributed (IID)
 Gaussian noise. The final
 objective (Eq.\ \ref{eq:tex_loss}) is minimized with respect to the synthesized texture. With each
 iteration of the optimization process, the synthesized texture is updated to appear increasingly
@@ -97,15 +98,15 @@ perceptually similar to the target texture. An overview of this process is prese
 
 \subsection{The Gram matrix as a texture metric}
 
-Before explaining the Gram matrix as a suitable texture metric, it is necessary to first understand the mathematics behind it. Simply, the Gram matrix of a set of vectors $v_1, \dots , v_n$ in an inner product space is the Hermitian matrix of inner products, whose entries are given by $G_{ij} = \langle v_i, v_j \rangle$ (a Hermitian matrix is a complex square matrix, $A$, that is equal to its own conjugate transpose, \ie, $A = \overline{A^\top}$). Since the inner product space of activation maps is over the real number field, the Gram matrix is also a symmetric matrix. Essentially, the Gram matrix is a covariance matrix describing which of its input vectors are correlated with each other. In the case of Gatys \etal's texture synthesis with a ConvNet, the set of vectors used to compute the Gram matrix are row-vectorized activation maps (Fig.\ \ref{fig:gram_matrix}).
+Before explaining the Gram matrix as a suitable texture metric, it is necessary to first understand the mathematics behind it. The Gram matrix, $\mathbf{G} \in \mathbb{R}^{n \times n}$, of a set of $m$-dimensional vectors, $v_1, \dots , v_n \in \mathbb{R}^m$, is the symmetric matrix of inner products, whose entries are given by $G_{ij} = \langle v_i, v_j \rangle$. Essentially, the Gram matrix is a covariance matrix describing which of its input vectors are correlated with each other. In the case of Gatys \etal's \cite{gatys2015} texture synthesis with a ConvNet, the set of vectors used to compute the Gram matrix are row-vectorized activation maps (Fig.\ \ref{fig:gram_matrix}).
 \input{fig_gram_matrix}
 
 In texture synthesis, the Gram matrix measures the amount that co-located features tend to activate together. By computing Gram matrices across several layers, a stationary, multi-scale representation of the input image in terms of its texture information is achieved.
 
 \subsection{Image style transfer}
 
-In subsequent work, Gatys \etal's texture model was used in image style
-transfer \cite{gatys2016image}, where the style of one image was
+In subsequent work, Gatys \etal's \cite{gatys2016image} texture model was used in image style
+transfer, where the style of one image was
 combined with the image content of another to produce a new image.
 This was achieved by appending an additional term to Eq.\ \ref{eq:tex_loss}
 that enforced the synthesized texture to match the semantic content of the given content image. Specifically,
@@ -126,7 +127,7 @@ optical flow to enforce temporal consistency of the
 resulting imagery. Although their model produced a video output, their core approach focused on an analysis of static texture on a per-frame basis. This is not to be confused with dynamic texture synthesis, which requires an analysis of \emph{dynamic} textures across space \emph{and time}.
 
 Variants of linear autoregressive models have been studied
-\cite{szummer1996,doretto2003} that jointly model the appearance and
+\cite{szummer1996,doretto2003,wang2003,fitzgibbon2001} that jointly model the appearance and
 dynamics of spatiotemporal patterns.
 More recent work has considered ConvNets as a basis for modelling 
 dynamic textures.
@@ -134,10 +135,8 @@ Xie \etal \cite{xie2017synthesizing} proposed a spatiotemporal
 generative model where each dynamic texture is modelled as a random
 field defined by multiscale, spatiotemporal ConvNet filter responses
 and dynamic textures are realized by sampling the model.
-Unlike the approach proposed by this thesis, which assumes pre-trained fixed networks,
-this approach requires the ConvNet weights to be trained using the
-input texture prior to synthesis.
-
+Unlike the proposed approach, which assumes pre-trained fixed networks,
+Xie \etal's \cite{xie2017synthesizing} approach requires their ConvNet weights to be trained using the input texture prior to synthesis. The manner in which they model dynamic textures appears to limit synthesis to a reconstruction, not an extrapolation, of the original sequence, limiting the generalizability (\eg, synthesis of textures beyond the spatiotemporal extent of the input) of their approach.
 A recent preprint from Funke \etal \cite{funke2017} described preliminary 
 results extending the framework of Gatys \etal \cite{gatys2015} 
 to model and  synthesize dynamic textures by computing a Gram 
@@ -155,61 +154,39 @@ This work is the first to demonstrate this form of style transfer.
 
 \section{Representations of dynamics}
 
-Numerous representations of dynamics in temporal imagery have been explored, each with their own limitations and level of abstraction. Adapted from Derpanis' dissertation on the role of representation in the analysis of visual spacetime \cite{derpanis2010role}, Fig.\ \ref{fig:dynamics_representations} illustrates an organization of several extant representations of temporal imagery dynamics.
+Numerous representations of dynamics in temporal imagery have been explored, each with their own limitations and level of abstraction. Figure \ref{fig:dynamics_representations} illustrates an organization of several extant representations of temporal imagery dynamics.
 \input{fig_dynamics_representations}
-At one extreme, no commitment to an abstraction is made, the raw signal is used directly (\eg, pointwise intensity and colour). This representation fails to leverage the rich underlying structure in the data. The remaining representations are discussed below.
+At one extreme, no commitment to an abstraction is made, the raw pixelwise intensity is used directly. This representation fails to leverage the rich underlying structure in the data. The remaining representations are discussed below.
 
 \subsection{Optical flow}
 
-At the other extreme of Fig.\ \ref{fig:dynamics_representations}, a two-dimensional (2D) vector field is used to represent the dynamics of the input temporal imagery. This vector field is known as \emph{optical flow}. It is used to represent the apparent motion of image pixels between two consecutive frames that is caused by the movement of objects or the camera. Each vector in the 2D vector field is a displacement vector consisting of a horizontal and vertical component, describing the movement of pixels from the first frame to the second. Fig.\ \ref{fig:optical_flow} provides a useful visualization of optical flow.
+At the other extreme of Fig.\ \ref{fig:dynamics_representations}, a two-dimensional (2D) vector field is used to represent the dynamics of the input temporal imagery. This vector field is known as \emph{optical flow}. It is used to represent the apparent motion of image pixels between two consecutive frames that is caused by the movement of objects or the camera. Each vector in the 2D vector field is a displacement vector consisting of a horizontal and vertical component, describing the movement of pixels from one frame to the next. Figure \ref{fig:optical_flow} provides a useful visualization of optical flow.
 \input{fig_optical_flow}
 The recovery of optical flow from temporal imagery has long been studied in computer vision. Traditionally, it has been addressed by handcrafted approaches \eg, \cite{horn1981,lucas1981,revaud2015epicflow}. Recently, ConvNet approaches have been demonstrated as viable alternatives \cite{dosovitskiy2015,ilg2017,ranjan2017,yu2016}.
 
-A limitation of optical flow is its reliance on a single coherent movement for each pixel and its underlying assumption on brightness constancy, which is difficult to justify for the dynamics one may encounter in the real world. Examples of dynamics optical flow would fail to capture include flickering, semi-transparent motion, and stochastic dynamics. These are dynamics typically existent in dynamic textures. Therefore, optical flow is not an optimal measure for representing the dynamics existent in dynamic textures.
+A limitation of optical flow is its reliance on a single coherent movement for each pixel and its underlying assumption on brightness constancy, which is difficult to justify for the spectrum of dynamics one encounters in the real world. Examples of dynamics that optical flow would fail to capture include flickering, semi-transparent motion, and stochastic dynamics. These are some of the dynamics typically exhibited by dynamic textures. Therefore, optical flow is not an optimal measure for representing the spectrum of dynamics in dynamic textures.
 
 \subsection{Marginalized spacetime oriented energies}
 \label{sec:msoe}
 
-At the midpoint between the two extremes lies the representation of dynamics that aims to capture a distribution of measurements of spacetime orientations in the input temporal imagery. Unlike flow-based analyses which focus on the apparent motion (\ie translation) present in the data, measurements of spacetime orientations take a geometric and generalized approach in capturing \emph{spacetime structures}: oriented structures in visual spacetime that manifest themselves as motion or non-motion (\eg flickering, stochastic dynamics, etc.). This is visualized in Fig.\ \ref{fig:spacetime_structures} alongside their frequency-space counterparts. 
+At the midpoint between the two extremes lies the representation of dynamics that aims to capture a distribution of measurements of spacetime orientations in the input temporal imagery.
+Unlike flow-based analyses which focus on the apparent motion (\ie, translation) present in the data, measurements of spacetime orientations take a geometric and generalized approach in capturing \emph{spacetime structures}: oriented structures in the spatiotemporal domain that manifest themselves as motion or non-motion (\eg, flickering, stochastic dynamics, etc.).
+
+Previous works \cite{adelson1985spatiotemporal,fahle1981,heeger1988,simoncelli1998,watson1983,nishimoto2011,derpanis2012spacetime} have shown that the velocity of image content (\ie, motion) is interpreted as a 3D oriented structure in the $x$-$y$-$t$ spatiotemporal domain. Furthermore, in the frequency domain, they showed that the signal energy of these oriented structures lie on a plane through the origin where the slant of the plane is defined by the velocity of the image content.
+For example, in the case where a spacetime structure is defined by the image velocity $(u, v)^\top$, the unit normal of the plane is given by $\hat{\mathbf{n}}=(u, v, 1)^\top / ||(u, v, 1)^\top||$.
+Hence, energy models of visual motion, like those presented in these works, are described as ``oriented energy'' or ``motion energy'' models, and they attempt to identify this orientation-plane (and hence the pattern's velocity) via a set of image filtering operations. Specifically, given an input image sequence, these models consist of an alternating sequence of linear and non-linear operations that yield a distributed representation (\ie,  implicitly coded) of pixelwise
+optical flow. These models have been motivated and studied in a variety of contexts, including computer vision, visual neuroscience, and visual psychology
+
+Whereas motion indicates a single, dominant orientation in the spatiotemporal and frequency domains, non-motion can indicate an unconstrained, underconstrained, multi-dominant, heterogeneous, or isotropic orientation. For example, an unconstrained orientation corresponds to structure-less imagery (\eg, image of a clear sky) in the spatiotemporal domain and a structure-less energy response in the frequency domain; and a multi-dominant orientation corresponds to multiple, super-imposed spacetime structures in the spatiotemporal domain (\eg, waterfall over a stationary background) and multiple, super-imposed oriented planes in the frequency domain. These, along with the other orientations, are visualized in Fig.\ \ref{fig:spacetime_structures}.
 \clearpage
 \input{fig_spacetime_structures}
 \clearpage
 
-Specifically, this thesis adopts the Marginalized Spacetime Oriented Energy (MSOE) approach of Derpanis \etal \cite{derpanis2010role,derpanis2012spacetime} in representing the observed dynamics of a dynamic texture. This representation was successfully used for the task of dynamic texture recognition \cite{derpanis2012spacetime}; here it is used for the task of dynamic texture synthesis.
-
-Most closely related to this approach are energy models of visual
-motion \cite{adelson1985spatiotemporal,heeger1988,simoncelli1998,nishimoto2011,derpanis2012spacetime,konda2014}
-that have been motivated and studied in a variety of contexts,
-including computer vision, visual neuroscience, and visual
-psychology.
-Given an input image sequence, these models consist of an
-alternating sequence of linear and non-linear operations that yield
-a distributed representation (\ie,  implicitly coded) of pixelwise
-optical flow.
-Here, an MSOE model motivates the
-representation of observed dynamics which will then be encoded
-as a ConvNet. Significantly, a completely analytically-defined
+This thesis adopts the Marginalized Spacetime Oriented Energy (MSOE) approach of Derpanis and Wildes \cite{derpanis2012spacetime} in representing the observed distribution of dynamics (\ie motion and non-motion) of an input dynamic texture. They conjectured that the constituent spacetime orientations for a spectrum of common
+visual patterns (\eg, dynamic textures) can serve as a basis for describing the temporal
+variation of an image sequence. They successfully applied their model for the task of dynamic texture recognition; here it is used for the task of dynamic texture synthesis. Significantly, a completely analytically-defined
 oriented energy ConvNet model provides the current state-of-the-art
-for the related task of dynamic texture recognition \cite{hadji2017}.
-
-In motion energy models, the velocity of image content (\ie, motion)
-is interpreted as a 3D orientation in the $x$-$y$-$t$
-spatiotemporal domain
-\cite{adelson1985spatiotemporal,fahle1981,heeger1988,simoncelli1998,watson1983}, previously defined as a spacetime structure.
-In the frequency domain, the signal energy of a translating
-pattern can be shown to lie on a plane through the origin
-where the slant of the plane is defined by the velocity of
-the pattern (Fig.\ \ref{fig:spacetime_structures}).
-Thus, motion energy models attempt to identify this 
-orientation-plane (and hence the pattern's velocity) via
-a set of image filtering operations.
-More generally,
-the constituent
-spacetime orientations for a spectrum of common
-visual patterns can serve as a basis for describing the temporal
-variation of an image sequence \cite{derpanis2012spacetime}.
-This observation suggests that motion energy models may form an
-ideal basis for the dynamics stream of the proposed dynamic texture synthesis ConvNet. As stated previously, the spacetime-oriented energy model (MSOE) proposed by Derpanis \etal \cite{derpanis2010role,derpanis2012spacetime} is used to motivate the network architecture. The MSOE model is reviewed here.
+for the related task of dynamic texture recognition \cite{hadji2017}. The proposed two-stream architecture adopts the MSOE model by encoding it as a ConvNet that serves as the representation of observed dynamics of input dynamic textures---the dynamics stream. The same computational steps are used, however, the handcrafted filters of the MSOE model are not used and are learned instead. The construction of the ConvNet is discussed in the next chapter and the MSOE model is reviewed here.
 
 Given input temporal imagery, $\mathbf{I} \in \mathbb{R}^{T \times H \times W}$ (time $\times$ height $\times$ width), a bank of oriented 3D
 filters, \eg, Gaussian third derivative filters $G_3 \in \mathbb{R}^{T \times H \times W}$, which are sensitive to a range of
@@ -226,18 +203,13 @@ structure:
 \begin{equation}
 	\bar{E}_{\hat{\theta}} = \sum_{(x, y, t) \in \Omega}{{E_{\hat{\theta}}(x, y, t)}^2}\ .
 \end{equation}
-At this point, each oriented energy measurement is confounded with spatial orientation. Consequently, in cases where the 
-spatial image structure varies wildly about an otherwise coherent dynamic
-region, the responses of the bank of oriented filters will reflect this
-behaviour and thereby become dependent on spatial appearance; whereas, a description consisting purely 
-of pattern dynamics is sought.
+At this point, each oriented energy measurement includes measurement of spatial orientation. This means that spatial image structures will affect the responses of the bank of oriented filters, making them dependent on spatial appearance. This is unwanted as this interference can occur at an otherwise coherent dynamic region, \eg, a surface with varying spatial appearance exhibiting a single, dominant motion. Thus, a description consisting purely of pattern dynamics is sought.
 To remove this difficulty, the spatial orientation component of each filter is discounted via ``marginalization''. Specifically, filter responses consistent with the same temporal orientation (not necessarily the same spatial orientation), $\hat{\theta}_i$, are summed:
 \begin{equation}
 	E_{\hat{\mathbf{n}}} = \sum_{i = 1}^{N}{E_{\hat{\theta}_i}}\ ,
 	\label{eq:oriented_filter_2.8}
 \end{equation}
 where $\hat{\mathbf{n}}$ denotes the unit normal of the plane in frequency-space that the spacetime structures captured by these filters lie upon (implicitly describing a single temporal orientation), and $N$ denotes the number of these filters.
-For example, in the case where a spacetime structure is defined by the image velocity $(u, v)^\top$ (\ie, optical flow), the unit normal is given by $\hat{\mathbf{n}}=(u, v, 1)^\top / ||(u, v, 1)^\top||$.
 These responses provide a pixelwise distributed measure
 of which spacetime structures (discounting spatial information) are
 present in the input.
